Fix register content overflow

--- a/CodeRed/src/app/authentication-view/authentication-view.component.css
+++ b/CodeRed/src/app/authentication-view/authentication-view.component.css
@@ -43,6 +43,6 @@
 
 @media screen and (min-width: 892px) {
   .authentication-page-content {
-    height: calc(100vh - 48px);
+    min-height: calc(100vh - 48px);
   }
 }
